--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,11 @@ dependencies {
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
 
+    // DataStore
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+
+    // Navigation
+    implementation "androidx.navigation:navigation-compose:$nav_version"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
