--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
         hilt_version = '2.44'
         room_version = '2.5.0'
         lifecycle_version = "2.6.0"
+        nav_version = "2.5.3"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
