--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,8 @@ dependencies {
     implementation 'androidx.compose.material3:material3:1.1.0-alpha08'
     // ViewModel utilities for Compose
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycle_version"
+    //Live Data
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     // Lifecycle utilities for Compose
     implementation "androidx.lifecycle:lifecycle-runtime-compose:$lifecycle_version"
     // alternately - if using Java8, use the following instead of lifecycle-compiler
