--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,11 +63,13 @@ dependencies {
 
     implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation 'androidx.activity:activity-compose:1.7.0'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.compose.material3:material3:1.1.0-beta01'
+    implementation "androidx.compose.material:material-icons-extended:$compose_version"
+
     // ViewModel utilities for Compose
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycle_version"
     //Live Data
@@ -77,11 +79,6 @@ dependencies {
     // alternately - if using Java8, use the following instead of lifecycle-compiler
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
 
-    // add below dependency for using room.
-    implementation "androidx.room:room-ktx:$room_version"
-    implementation 'com.google.firebase:firebase-firestore-ktx:24.1.0'
-    // To use Kotlin annotation processing tool (kapt)
-    kapt "androidx.room:room-compiler:$room_version"
 
     // Retrofit for Networking requests
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
